--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,32 @@
+
+# PostgreSQL database connection
+spring.datasource.url=jdbc:postgresql://localhost:5432/Contact-DB
+spring.datasource.username=postgres
+spring.datasource.password=12345678
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA settings
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+
+
+
+
 # H2 Database configuration
-spring.datasource.url=jdbc:h2:mem:contactdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:mem:contactdb
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+
+
 
 # JPA/Hibernate properties
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.show-sql=true
 
 # H2 Console (for testing)
 spring.h2.console.enabled=true
