--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,7 @@
 
-# PostgreSQL database connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/Contact-DB
-spring.datasource.username=postgres
-spring.datasource.password=12345678
-spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA settings
+
+# JPA / Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
