--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-
-
+spring.thymeleaf.cache=false
 
 # H2 Database configuration
 #spring.datasource.url=jdbc:h2:mem:contactdb
